<resources>
    <string name="app_name">MovieDB</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_more">More</string>
    <string name="title_movie">Movie</string>
    <string name="title_genre">Genre</string>
    <string name="title_search">Search</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rate">Top rate</string>
    <string name="title_go">Go</string>
    <string name="noti_choose_genres">Please choose any genres</string>
    <string name="title_des">Descriptions</string>
    <string name="title_cast">Casts</string>
    <string name="title_review">Reviews</string>
    <string name="title_recommend">Recommends</string>
    <string name="title_read_more">Read more</string>
    <string name="hint_search_movie">Enter movie\'s title</string>
    <string name="noti_data_not_available">Data not available</string>
    <string name="title_companies">Companies:</string>
    <string name="title_rating">Rating:</string>
    <string name="title_release_date">Release date:</string>
    <string name="title_countries">Countries:</string>
    <string name="title_genres">Genres:</string>
    <string name="title_languages">Languages:</string>
</resources>
